--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "@swc/core": "^1.3.38",
     "@swc/jest": "^0.2.24",
     "@types/uuid": "^9.0.1",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.29.3",
+    "sequelize-typescript": "^2.1.5",
+    "sqlite3": "^5.1.4",
     "uuid": "^9.0.0"
   },
   "scripts": {
