--- a/.swcrc
+++ b/.swcrc
@@ -1,7 +1,7 @@
 {
   "jsc": {
     "parser": {
-      "sintax": "typescript",
+      "syntax": "typescript",
       "decorators": true
     },
     "transform": {
