--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "devDependencies": {
     "@types/jest": "^29.4.0",
+    "@types/supertest": "^2.0.12",
     "jest": "^29.5.0",
+    "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
     "typescript": "^4.9.5"
@@ -10,7 +12,11 @@
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.38",
     "@swc/jest": "^0.2.24",
+    "@types/express": "^4.17.18",
     "@types/uuid": "^9.0.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "nodemon": "^3.0.1",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.29.3",
     "sequelize-typescript": "^2.1.5",
@@ -19,6 +25,7 @@
   },
   "scripts": {
     "test": "npm run tsc -- --noEmit && jest",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "dev": "nodemon src/infrastructure/api/server.ts"
   }
 }
