--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "sequelize": "^6.29.3",
     "sequelize-typescript": "^2.1.5",
     "sqlite3": "^5.1.4",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yup": "^1.3.1"
   },
   "scripts": {
     "test": "npm run tsc -- --noEmit && jest",
