--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@types/jest": "^29.4.0",
+    "@types/jstoxml": "^2.0.2",
     "@types/supertest": "^2.0.12",
     "jest": "^29.5.0",
     "supertest": "^6.3.3",
@@ -16,6 +17,7 @@
     "@types/uuid": "^9.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jstoxml": "^3.2.8",
     "nodemon": "^3.0.1",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.29.3",
